# xray

./: .git_commit_message.txt  .git_commit_msg.txt  .gitignore  BUILD.md  CMakeLists.txt  Makefile  README.md  closure.c  fn_proto.c  fn_proto.h  main.c  run_all_tests.sh  upvalue.c  upvalue.h  xarray.c  xarray.h  xast.c  xast.h  xchunk.c  xchunk.h  xcompiler.c  xcompiler.h  xdebug.c  xdebug.h  xeval.c  xeval.h  xeval_oop.c  xgc.h  xhash.c  xhash.h  xhashmap.h  xinstance.c  xinstance.h  xlex.c  xlex.h  xmap.c  xmem.c  xmem.h  xmethod.c  xmethod.h  (+16 more)
example/: 01_hello.xr  02_variables.xr  03_control_flow.xr  04_expressions.xr  05_comparisons.xr  06_logic.xr  07_variables.xr  08_scope.xr  09_constants.xr  10_if_else.xr  11_loops.xr  12_nested.xr  13_break_continue.xr  14_complex_control.xr  15_functions.xr  15_functions_simple.xr  16_recursion.xr  17_first_class_functions.xr  18_higher_order.xr  19_complex_functions.xr  20_type_basics.xr  22_type_inference.xr  23_type_alias.xr  24_generics.xr  26_closure_block.xr  26_closure_global.xr  26_closure_readonly.xr  26_closure_test1.xr  26_closures_simple.xr  27_arrow_functions.xr  28_advanced_functions.xr  29_array_basics.xr  30_array_methods.xr  31_array_higher_order.xr  32_array_advanced.xr  33_string_basics.xr  34_template_strings.xr  35_map_basics.xr  36_map_methods.xr  37_map_complete.xr  (+30 more)
include/xray/: compiler_context.h  vm_context.h  xerror.h  xray.h
src/backend/bytecode/: xchunk.c  xchunk.h  xdebug.c
src/backend/compiler/: xcompiler.c  xcompiler.h  xcompiler_context.c  xcompiler_context.h  xfusion.c  xfusion.h  xinline.c  xinline.h  xoptimize.c  xoptimize.h  xpeephole.c  xpeephole.h
src/backend/vm/: xvm.c  xvm.h  xvm_context.c
src/compiler/: xsymbol.c  xsymbol.h
src/frontend/ast/: xast.c  xast.h
src/frontend/lexer/: xlex.c  xlex.h
src/frontend/parser/: xparse.c  xparse.h  xparse_oop.c
src/runtime/closure/: closure.h  fn_proto.h
src/runtime/objects/: xarray.c  xarray.h  xclass.c  xclass.h  xinstance.c  xmap.h  xmethod.c  xmethod.h  xstring.c  xstring.h
src/utils/: xhashmap.c
test/: test_array  test_array.c  test_array_bc.c  test_array_set_bc.c  test_ast.c  test_bytecode.c  test_class_basic.c  test_class_inherit.c  test_closure_advanced_bc.c  test_closure_bc.c  test_comp_simple.c  test_comparison_debug.c  test_compiler.c  test_comprehensive_bc.c  test_comprehensive_features.c  test_control_flow  test_control_flow.c  test_edge_cases.c  test_edge_quick.c  test_eval  test_eval.c  test_fib.c  test_fib_bytecode.c  test_for_loop.c  test_for_loop_debug.c  test_for_simple.c  test_for_zero.c  test_functions  test_functions.c  test_functions_bc.c  test_generics  test_generics.c  test_lexer.c  test_map.c  test_mem  test_mem.c  test_parser.c  test_print_bc.c  test_profile_fib.c  test_recursive.c  (+14 more)
tests/framework/: xtest.h
tests/unit/: test_array.c  test_array_bc.c  test_array_set_bc.c  test_ast.c  test_bytecode.c  test_class_basic.c  test_class_inherit.c  test_closure_advanced_bc.c  test_closure_bc.c  test_comp_simple.c  test_comparison_debug.c  test_compiler.c  test_compiler_context.c  test_comprehensive_bc.c  test_comprehensive_features.c  test_control_flow.c  test_edge_cases.c  test_edge_quick.c  test_eval.c  test_fib.c  test_fib_bytecode.c  test_for_loop.c  test_for_loop_debug.c  test_for_simple.c  test_for_zero.c  test_framework_demo.c  test_framework_simple.c  test_functions.c  test_functions_bc.c  test_generics.c  test_lexer.c  test_map.c  test_mem.c  test_parser.c  test_print_bc.c  test_profile_fib.c  test_recursive.c  test_recursive_closure_minimal.c  test_simple_call.c  test_string.c  (+7 more)
